--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@reduxjs/toolkit": "^2.2.7",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.45.2",
@@ -18,6 +19,7 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
